# CitadelTestTask

./: .gitignore  CMakeLists.txt  Dockerfile  Readme.md  entrypoint.sh  example.json  main.cpp
Aggregator/: Aggregator.h
Parser/: Parser.cpp  Parser.h
Worker/: Worker.h
example/: fillScript.py
example/data/: file1.txt  file2.txt
include/: models.h
module_GTests/: aggregatorTest.cpp  parserTest.cpp  workerTest.cpp
source/Aggregator/: Aggregator.h  aggregator.cpp
source/Logger/: Logger.h
source/Orchestrator/: Orchestrator.cpp  Orchestrator.h
source/Parser/: Parser.cpp  Parser.h
source/Worker/: Worker.cpp  Worker.h
test/: aggregatorTest.cpp  workerTest.cpp
